feat: add message read receipts
